objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Inventory__c</fullName>
        <label>Current Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifespan_Months__c</fullName>
        <label>Lifespan Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Macaron_Flavor__c</fullName>
        <defaultValue>CASE(MONTH(TODAY()),1, &quot;Gingerbread&quot;,2, &quot;Strawberry&quot;,4, &quot;Chocolate&quot;,7, &quot;Raspberry&quot;,11, &quot;Pumpkin&quot;,12, &quot;Mint&quot;, &quot;Vanilla&quot;)</defaultValue>
        <label>Macaron Flavor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gingerbread</fullName>
                </value>
                <value>
                    <fullName>Strawberry</fullName>
                </value>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
                <value>
                    <fullName>Raspberry</fullName>
                </value>
                <value>
                    <fullName>Pumpkin</fullName>
                </value>
                <value>
                    <fullName>Mint</fullName>
                </value>
                <value>
                    <fullName>Vanilla</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Cycle__c</fullName>
        <description>Number of days required before routine maintenance is needed</description>
        <label>Maintenance Cycle (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replacement_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replacement Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shirt__c</fullName>
        <label>Shirt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flavors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warehouse_SKU__c</fullName>
        <externalId>true</externalId>
        <label>Warehouse SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>